--- a/web/css/style.css
+++ b/web/css/style.css
@@ -26,6 +26,31 @@ p {
   border-color: #fff;
 }
 
+.btn.btn-preto:hover {
+  color: #000;
+  border-color: #000;
+}
+
+.subtitulo {
+  font-size: 24px;
+  line-height: 30px;
+  font-weight: bold;
+  letter-spacing: 0.1em;
+  color: #000;
+  text-transform: uppercase;
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+.subtitulo:after {
+  content: "";
+  display: block;
+  width: 60px;
+  height: 3px;
+  background-color: #000;
+  margin: 14px auto 10px auto;
+}
+
 /* Header */
 
 .header {
@@ -34,6 +59,7 @@ p {
   width: 100%;
   background-color: #fec63e;
   padding: 15px 0;
+  z-index: 2;
 }
 
 .header-menu {
@@ -106,4 +132,52 @@ p {
   font-weight: bold;
   font-size: 14px;
   letter-spacing: 0.1em;
+}
+
+/* Produtos */
+
+.produtos {
+  padding: 60px 0;
+}
+
+.produtos-lista li {
+  background: #fec63e;
+  text-align: center;
+}
+
+.produtos-lista li h3 {
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 25px;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  margin-top: 20px;
+}
+
+.produtos-lista li h3:after {
+  content: "";
+  display: block;
+  width: 60px;
+  height: 3px;
+  background-color: #000;
+  margin: 2px auto;
+}
+
+.produtos-lista li p {
+  padding: 10px 20px 20px 20px;
+}
+
+.produtos-icone {
+  background: #000;
+  padding: 20px;
+}
+
+.call {
+  padding-top: 40px;
+  text-align: center;
+  clear: both;
+}
+
+.call p {
+  margin-bottom: 20px;
 }
