--- a/web/css/style.css
+++ b/web/css/style.css
@@ -41,6 +41,13 @@ p {
   text-align: center;
   margin-bottom: 40px;
 }
+.subtitulo.subtitulo-amarelo {
+  color: #fec63e;
+}
+
+.subtitulo.subtitulo-amarelo:after {
+  background-color: #fec63e;
+}
 
 .subtitulo:after {
   content: "";
@@ -180,4 +187,20 @@ p {
 
 .call p {
   margin-bottom: 20px;
+}
+
+/* Portfólio */
+
+.portfolio {
+  width: 100%;
+  background: #000;
+  padding: 40px 0;
+}
+
+.portfolio-lista li:last-child {
+  margin-top: 20px;
+}
+
+.portfolio .call p {
+  color: #fff;
 }
