--- a/web/css/style.css
+++ b/web/css/style.css
@@ -45,13 +45,6 @@ img {
   text-align: center;
   margin-bottom: 40px;
 }
-.subtitulo.subtitulo-amarelo {
-  color: #fec63e;
-}
-
-.subtitulo.subtitulo-amarelo:after {
-  background-color: #fec63e;
-}
 
 .subtitulo:after {
   content: "";
@@ -59,9 +52,35 @@ img {
   width: 60px;
   height: 3px;
   background-color: #000;
-  margin: 14px auto 10px auto;
+  margin: 8px auto;
 }
 
+.subtitulo-interno {
+  font-size: 24px;
+  line-height: 30px;
+  font-weight: bold;
+  letter-spacing: 0.1em;
+  color: #000;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+}
+
+.subtitulo-interno:after {
+  content: "";
+  display: block;
+  width: 60px;
+  height: 3px;
+  background-color: #000;
+  margin: 8px 0;
+}
+
+.subtitulo.subtitulo-amarelo {
+  color: #fec63e;
+}
+
+.subtitulo.subtitulo-amarelo:after {
+  background-color: #fec63e;
+}
 /* Header */
 
 .header {
@@ -97,6 +116,10 @@ img {
   color: #fff;
 }
 
+.header-menu ul li a.menu-ativo {
+  color: #fff;
+}
+
 /* Introdução */
 
 .introducao {
@@ -114,6 +137,31 @@ img {
   font-size: 48px;
   font-weight: bold;
   text-transform: uppercase;
+}
+
+.introducao-interna {
+  width: 100%;
+  margin-top: 92px;
+  height: 160px;
+  background-size: cover;
+  text-align: center;
+  color: #fff;
+  padding-top: 30px;
+}
+
+.introducao-interna h1 {
+  font-size: 36px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.introducao-interna h1:after {
+  content: "";
+  display: block;
+  width: 60px;
+  height: 3px;
+  background-color: #fff;
+  margin: 6px auto 10px auto;
 }
 
 .quote-externo {
@@ -231,6 +279,7 @@ img {
 }
 .qualidade-lista {
   padding-top: 20px;
+  overflow: auto; /* clear-fix */
 }
 
 .qualidade-lista li {
