Added responsive design to Produtos page

--- a/web/css/responsivo.css
+++ b/web/css/responsivo.css
@@ -18,6 +18,27 @@
     width: 26px;
     height: 26px;
   }
+
+  /*Sobre */
+
+  .produtos-item h2 {
+    top: -150px;
+  }
+
+  .produtos-icone {
+    padding: 41px 0;
+  }
+
+  .produtos-info p {
+    font-size: 14px;
+    line-height: 20px;
+    padding: 20px 30px;
+    height: 123px;
+  }
+
+  .produtos-info ul li {
+    width: 181px;
+  }
 }
 
 /* Estilo para smartphone */
@@ -94,5 +115,35 @@
   .missao-sobre ul li {
     font-size: 14px;
     line-height: 25px;
+  }
+
+  /* Produtos */
+
+  .produtos-item h2 {
+    top: -100px;
+    margin-bottom: -68px;
+  }
+
+  .produtos-info p {
+    font-size: 14px;
+    line-height: 20px;
+    height: auto;
+    padding: 20px 30px;
+  }
+
+  .produtos-info ul li {
+    width: 149px;
+    height: 49px;
+    font-size: 14px;
+    line-height: 20px;
+    padding-top: 14px;
+  }
+
+  .produtos-form {
+    padding-right: 0;
+  }
+
+  .orcamento-dados ul {
+    padding-right: 0;
   }
 }
