Added responsive design to Contato page

--- a/web/css/responsivo.css
+++ b/web/css/responsivo.css
@@ -146,4 +146,11 @@
   .orcamento-dados ul {
     padding-right: 0;
   }
+
+  /* Contato */
+
+  .contato-form {
+    padding-right: 0;
+    margin-bottom: 40px;
+  }
 }
